--- a/myday.xcodeproj/xcshareddata/xcschemes/myday Debug.xcscheme
+++ b/myday.xcodeproj/xcshareddata/xcschemes/myday Debug.xcscheme
@@ -29,11 +29,11 @@
       shouldUseLaunchSchemeArgsEnv = "YES">
       <TestPlans>
          <TestPlanReference
-            reference = "container:UnitTestPlan.xctestplan"
-            default = "YES">
+            reference = "container:UnitTestPlan.xctestplan">
          </TestPlanReference>
          <TestPlanReference
-            reference = "container:UITestPlan.xctestplan">
+            reference = "container:UITestPlan.xctestplan"
+            default = "YES">
          </TestPlanReference>
       </TestPlans>
       <Testables>
